modificacion de logos y parte deL INICIO

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,38 @@
 .read-the-docs {
   color: #888;
 }
+.triangulo-acostado {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    #0d3939 0%,
+    #1f8a8a 20%,
+    #4dbdbd 40%,
+    #9ff1f1 50%,
+    #1f8a8a 60%,
+    #0f5d5d 80%,
+    #0d3939 100%
+  );
+  background-size: 400% 400%;
+  clip-path: polygon(0% 0%, 70% 0%, 100% 100%, 0% 100%);
+  filter: drop-shadow(0 0 10px #3dbaba);
+  z-index: -10;
+  animation: metalShine 15s ease-in-out infinite;
+}
+
+@keyframes metalShine {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
